# phonebook_rest_api

./: .env  Cargo.toml  README.md
migrations/: 0001_phone_book.down.sql
src/: main.rs
